overflow hidden to prevent sideways scrolling mobile

--- a/css/pubblog.css
+++ b/css/pubblog.css
@@ -42,6 +42,7 @@ header a:hover, #navicon:hover { color:#777; }
   padding:0 20px;
   min-height:800px;
   color:#555;
+  overflow:hidden;
 }
 
 #content h1,
